# learn-webgpu

./: README.md  index.html  style.css
js/: app.js  call.js  elemwise.js  matmul.js
rust/: Cargo.toml
rust/src/: matmul.rs  matmul_cpu.rs
rust/src/shaders/: matmul.wgsl
